# GPU_PIV

./: .gitmodules  CMakeLists.txt  GPU_PIV  INSTALL.sh  Makefile  README.md  im1.tiff  my_program  test.h5  true_data.mat  unpackData.m
example_resources/: IM_FILTER_setup.in  PIVsetup.in  cam1_im_000_A_adjusted.tiff  cam1_im_000_B_adjusted.tiff  im1.tiff  im2.tiff  image_generation.m  output.h5  piv_test_image_frame1.tif  piv_test_image_frame2.tif  plotting.m  plotting.py  plotting_hdf5.m  synthetic_data.py
example_resources/matlab_plotting_tools/: plotting_hdf5.m
example_resources/python_plotting_tools/: plotting.py  plotting_hdf5.py
example_resources/synthetic_data/: image_generation.m  piv_test_image_frame1.tif  piv_test_image_frame2.tif  synthetic_data.py
src/: Bspline_interpolation.cpp  FFT.cpp  FFT_functions.c  FFT_functions.h  OpenCL_utilities.c  OpenCL_utilities.cpp  OpenCL_utilities.h  bicubic_interpolation.cpp  complexMaths.cpp  dataArrangement.c  dataArrangement.cpp  dataArrangement.h  determineCorrelation.c  determineCorrelation.cpp  determineCorrelation.h  err_codes.h  functions.h  functions.hpp  globalVars.h  globalVars.hpp  gridFunctions.c  gridFunctions.h  image_processing.cpp  inputFunctions.c  inputFunctions.cpp  inputFunctions.h  macros.hpp  main.c  main.cpp  mainKernel.c  mainKernel.h  main_imagePreproces.cpp  outputFunctions.cpp  standardHeader.hpp  standardLibraries.hpp  tiffFunctions.c  tiffFunctions.cpp  tiffFunctions.h  utilities.c  utilities.h  (+3 more)
src_old/: Bspline_interpolation.c  OpenCL_utilities.c  dataArrangement.c  functions.h  macros.h  standardLibraries.h  tiffFunctions.c  vectorValidation.c
testing/: 2D_interpolating.c  2D_spline_interpolation.py  Makefile  clamped_spline.py  my_program  spline_interpolation.py  understanding_splines.py
testing/2D_spline_interpolation/: 2D_spline.py  2D_spline_interpolation.c  2D_spline_interpolation.cpp  Makefile  clamped_spline_with_better_knot.py  my_program
testing/bicubic_interpolation/: Makefile  main.cpp  my_program
testing/hdf5_test/: 2d_data_cpp.h5  Makefile  groups_official.h5  main.cpp  my_data.h5  my_program
